# feasibility

./: .gitignore  aggregate_pid_thesis_sweeps.py  aggregate_thesis_sweeps.py  bayopt_all_targets_burr.csv  bayopt_all_targets_miscuts.csv  bayopt_beta_sweep_burr.csv  bayopt_beta_sweep_miscuts.csv  compare_all_methods.py  convergence_plot.py  cutting_simulator.py  discrete_safe_acquisition_optimizer.py  gp_wrapper.py  mutual_information.ipynb  preprocess.py  pyproject.toml  report.md  results.json  results_baselines.json  results_deep_jdot.json  results_jcpot.json  results_strategy_a.json  source_data_3d.html  synthetic_benchmark.py  tl_bayopt.py  tl_bayopt_beta.py  tl_experiments.py  tl_pid_sweep_itae.csv  tl_pid_sweep_unstable.csv  tl_synthetic_bayopt.py  transfer_learning_adapt.ipynb  transfer_learning_multitaskgp.ipynb  utils.py  visualize_simulator_3d.py
OT/: README.md  baselines.py  data.py  deep_jdot.py  evaluate.py  features.py  ot_jcpot.py  ot_strategy_a.py
data/: 20250414_Fehlschnitte.csv  20250424_ltt_parameter_processes_new.csv  task_df_dict.pkl  unique_combinations.pkl
docs/: constrained_bo_transfer.md  pid_thesis_results.md  synthetic_benchmark.md  synthetic_thesis_results.md
pressure_simulation/: Alpha2Conductance.py  ChamberEnv.py  SIMULATION.md  StatusCalculate.py  StepResponse.py  SystemSimulate.py  animate_pid.py  global_settings.py  gui.py  optimize_pid_bo.py  pid.py  pid_convergence_plot.py  pressure_controller.py  reference_curve.py  simulation.py  tl_pid_bayopt.py  tl_pid_thesis.py
pressure_simulation/data/: N2_30SLM_Room_PR.txt  (+3 more)
