[project]
name = "feasibility"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.1",
    "plotly>=5.20",
    "pot>=0.9",
    "ipykernel>=6.29",
    "jupyter>=1.0",
]
